feat: Add Footnote

--- a/语法规则书.md
+++ b/语法规则书.md
@@ -73,7 +73,30 @@ Doc2LaTeX 是一个将 Word 文档转换为 LaTeX 格式的工具，支持多种
   \textbf{\textcolor{blue}{重要内容}}
   ```
 
-#### 2.2 特殊字符处理
+#### 2.2 脚注语法
+
+**标准脚注语法**
+- 语法：`【脚注：脚注内容】` 或 `【脚注:脚注内容】`
+- 效果：在当前位置插入脚注，脚注内容显示在页面底部
+- 示例：
+  ```
+  这是重要概念【脚注：这里是详细解释】的说明。
+  需要注意的是【脚注:补充信息】。
+  ```
+- LaTeX 输出：
+  ```latex
+  \footnote{这里是详细解释}
+  ```
+
+**繁体版脚注语法**
+- 语法：`【腳註：腳註內容】` 或 `【腳註:腳註內容】`
+- 效果：繁体版本的脚注语法，功能相同
+- 示例：
+  ```
+  這是重要概念【腳註：這裡是詳細解釋】的說明。
+  ```
+
+#### 2.3 特殊字符处理
 
 系统自动处理以下特殊字符：
 
@@ -265,10 +288,11 @@ Doc2LaTeX 是一个将 Word 文档转换为 LaTeX 格式的工具，支持多种
 ### 1. 解析顺序
 1. 特殊字符替换（%、×、≤ 等）
 2. 加粗语法处理（【加粗：】和【加粗：】）
-3. 网址识别和转换
-4. 术语字典替换
-5. 自定义语法解析（图片、标题、列表等）
-6. 默认加粗处理（无冒号的【】语法）
+3. 脚注语法处理（【脚注：】和【腳註：】）
+4. 网址识别和转换
+5. 术语字典替换
+6. 自定义语法解析（图片、标题、列表等）
+7. 默认加粗处理（无冒号的【】语法）
 
 ### 2. 语法冲突处理
 - 有冒号的语法优先于默认加粗
@@ -321,6 +345,53 @@ Doc2LaTeX 是一个将 Word 文档转换为 LaTeX 格式的工具，支持多种
 - 智能语法建议
 - 文件映射信息显示
 
+## 新特性更新
+
+### v1.1 新增功能
+
+#### 1. 脚注语法支持
+- **简体版**：`【脚注：脚注内容】` 或 `【脚注:脚注内容】`
+- **繁体版**：`【腳註：腳註內容】` 或 `【腳註:腳註內容】` 
+- 自动生成LaTeX脚注，在页面底部显示补充信息
+- 支持在任何位置插入脚注，不影响正文流畅度
+
+#### 2. 自动项目发现
+- **灵活输入**：不再限制于固定的锻炼手册、急救手册、食物手册
+- **自动发现**：系统自动识别 `data/input/` 目录下的所有文件夹作为项目
+- **智能过滤**：自动跳过系统文件夹（document、raw_document、logs等）
+- **默认配置**：为自动发现的项目生成合理的默认配置
+- **项目要求**：项目文件夹需包含 `.docx` 文件或图片文件才会被识别
+
+#### 3. 增强的错误提示
+- 脚注语法错误时提供智能建议
+- 项目发现失败时给出明确指导
+- 支持中英文项目文件夹名称
+
+#### 4. 使用示例
+
+**创建自定义项目**：
+```bash
+# 创建项目文件夹
+mkdir data/input/我的项目
+
+# 添加文档和图片
+cp 你的文档.docx data/input/我的项目/1-0-0.docx
+cp 图片.jpg data/input/我的项目/
+
+# 查看所有可用项目
+python -m doc2latex.main --list-handbooks
+
+# 处理特定项目  
+python -m doc2latex.main --handbook "我的项目"
+```
+
+**使用脚注语法**：
+```
+这是一个重要概念【脚注：这里可以添加详细的技术说明或参考资料】。
+
+在繁体版本中【腳註：這裡是繁體的腳註內容】也同样支持。
+```
+
 ---
 
-*本语法规则书基于 Doc2LaTeX v1.0 系统，支持中文文档到 LaTeX 的高质量转换。*
+*本语法规则书基于 Doc2LaTeX v1.1 系统，支持中文文档到 LaTeX 的高质量转换。*
